objects/Alert__c.object
<CustomObject>
    <fields>
        <fullName>Alert_Detail__c</fullName>
        <label>Alert Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Type__c</fullName>
        <label>Alert Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Danger</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                    <isActive>false</isActive>
                    <label>Success</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Alerts</relationshipLabel>
        <relationshipName>Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alerts</relationshipLabel>
        <relationshipName>Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Alert</label>
    <nameField>
        <displayFormat>ALT-{0000}</displayFormat>
        <label>Alert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>